--- a/02/src/components/Views/ServicesPage/Offers/Offer/Offer.module.scss
+++ b/02/src/components/Views/ServicesPage/Offers/Offer/Offer.module.scss
@@ -1,7 +1,109 @@
 @import "../../../../../styles/Mixins.scss";
 @import "../../../../../styles/Variables.scss";
 
+
+@keyframes scroll {
+    0% {
+            filter:brightness(0%);
+            transform: scale(.8);
+    }
+    60% {
+            filter:brightness(90%);
+            transform: scale(1);
+    }
+    70%,100% {
+            filter:brightness(100%);
+            transform: scale(1);
+    }
+}
+@keyframes scrollImage {
+    from {
+            filter:grayscale(100%);
+    }
+    to {
+            filter:grayscale(0%) hue-rotate(240deg);
+    }
+}
+@keyframes scrollTitle {
+    from {
+            color: #fff;
+    }
+    to {
+            color: #ff8b8b;
+    }
+}
+
 .wrapper {
+    animation:scroll .1s linear;
+     animation-fill-mode: forwards;
+    // animation-range-end: cover 100%;
+    // animation-range-start: cover 20%;
+    animation-timeline: view(y);
     display: grid;
-    grid-template-columns: repeat(25,1fr);
+    gap:.45rem;
+    grid-template-columns: repeat(2,1fr);
+    margin: 7rem auto;
+    width: 100%;
+}
+
+.container {
+    @include flex(flex-start,flex-start,column,null,1.7rem);
+    grid-column: 1/-1;
+    grid-row: 2;
+    padding: 1rem;
+    & >* { 
+        width: 100%;
+    }
+}
+
+.title {
+    @include font(4.3rem,700,1.3,null,null,start,$fontBlackOps);
+}
+
+.content {
+    @include font(1.65rem,500,1.5,null,null,start,null);
+    text-wrap: balance;
+}
+
+.image {
+    @include size(30rem,100%);
+    grid-column: 1/-1;
+    grid-row: 1;
+    position: relative;
+}
+
+@media only screen {
+    @media (min-width:600px){
+        .wrapper {
+            width:clamp(5rem,55rem,95%);
+        }       
+    }
+    @media (min-width:1100px){
+        .wrapper {
+            min-height: 45rem;
+            width: 100%;
+        }
+
+        .container {
+            grid-column: 1;
+            grid-row: 1;
+            row-gap:4rem;
+        }
+
+        .title {
+            font-size: 5.7rem;
+        }
+
+        .content {
+            font-size: 1.8rem;
+            text-wrap: balance;
+        }
+
+
+        .image {
+            @include size(100%,100%);
+            grid-column: 2;
+            grid-row: 1;
+        }
+    }
 }
