--- a/02/src/components/Views/ServicesPage/Offers/Offer/Offer.module.scss
+++ b/02/src/components/Views/ServicesPage/Offers/Offer/Offer.module.scss
@@ -7,43 +7,30 @@
             filter:brightness(0%);
             transform: scale(.8);
     }
-    60% {
+    40% {
             filter:brightness(90%);
-            transform: scale(1);
+            transform: scale(.9);
     }
-    70%,100% {
+    50%,100% {
             filter:brightness(100%);
             transform: scale(1);
     }
 }
-@keyframes scrollImage {
-    from {
-            filter:grayscale(100%);
-    }
-    to {
-            filter:grayscale(0%) hue-rotate(240deg);
-    }
-}
-@keyframes scrollTitle {
-    from {
-            color: #fff;
-    }
-    to {
-            color: #ff8b8b;
-    }
-}
+
 
 .wrapper {
     animation:scroll .1s linear;
      animation-fill-mode: forwards;
-    // animation-range-end: cover 100%;
-    // animation-range-start: cover 20%;
     animation-timeline: view(y);
     display: grid;
     gap:.45rem;
     grid-template-columns: repeat(2,1fr);
-    margin: 7rem auto;
+    transition:.12s ease-in-out filter;
     width: 100%;
+    &:focus-visible,
+    &:hover {
+            filter:brightness(100%) !important;
+    }
 }
 
 .container {
@@ -81,6 +68,7 @@
     @media (min-width:1100px){
         .wrapper {
             min-height: 45rem;
+            gap:3rem;
             width: 100%;
         }
 
