--- a/02/src/components/Views/PostPage/Hero/Hero.module.scss
+++ b/02/src/components/Views/PostPage/Hero/Hero.module.scss
@@ -2,10 +2,10 @@
 @import "../../../../styles/Variables.scss";
 
 .wrapper {
-    width:clamp(3rem,120rem,95%);
+    width:clamp(3rem,120rem,90%);
     margin: 7rem auto 2rem;
     display: grid;
-    gap:2rem;
+    gap:1rem;
     grid-template-areas: 
         "breadcrumbs breadcrumbs breadcrumbs release release"
         "heading heading heading heading heading"
@@ -17,7 +17,7 @@
 
 .breadcrumbs,
 .release {
-    height: 8rem;
+    height: 6rem;
 }
 
 .breadcrumbs {
@@ -39,7 +39,7 @@
 
 .release {
     @include flex(center,flex-end);
-    @include font(2.12rem,600,1.2,uppercase,null,center,null);
+    @include font(1.72rem,600,1.2,uppercase,null,center,null);
     grid-area: release;
 
 }
@@ -64,16 +64,35 @@
 
 .title {
     grid-area: heading;
-    @include font(9rem,700,.95,null,null,start,$fontBlackOps);
-    padding: 3rem 0rem;
+    @include font(4.75rem,700,.95,null,null,start,$fontBlackOps);
+    padding: 1.2rem 0rem;
     text-wrap: pretty;
     color:#ff2f0b;
 }
 
 .excerpt {
-    @include font(2.1rem,500,1.5,null,null,start);
+    @include font(1.9rem,550,1.9,null,null,start);
     padding: 1.2rem;
     color: #ddd;
     grid-area: excerpt;
     text-wrap: balance;
+}
+
+@media only screen {
+    @media (min-width:570px){
+        .title {
+            font-size: 6.2rem;
+        }
+    }
+    @media (min-width:1000px){
+        .wrapper {
+            row-gap:3rem;
+        }
+        .title {
+            font-size: 9rem;
+        }
+        .excerpt {
+            font-size: 2.1rem;
+        }
+    }
 }
