--- a/02/src/components/Utils/Cards/BlogCard/BlogCard.module.scss
+++ b/02/src/components/Utils/Cards/BlogCard/BlogCard.module.scss
@@ -2,6 +2,51 @@
 @import '../../../../styles/Variables.scss';
 
 .recommended__wrapper {
+    height: 100%;
+    & >a {
+        @include flex(center,flex-start, row nowrap);
+        color: rgb(193, 168, 160);
+        gap:1rem;
+        height: 100%;
+        position: relative;
+        transition:.12s linear color, .12s linear text-shadow;
+        
+        &:focus-within,
+        &:hover {
+            color: rgb(249, 78, 10);
+            text-shadow:0 0 1rem rgb(249, 78, 10);
+        }
+        & > i {
+            @include flex(center,center);
+            @include size(5rem,5rem);
+            font-size: 4.2rem;
+            margin: auto 0rem auto 0rem !important;
+        }
+        & > p {
+            @include font(1.6rem,600);
+            display: none;
+            padding: 0.45rem;
+        }
+    }
+    &[data-direction="left"]{
+        padding: 0rem 0rem 0rem 1rem;
+        & > a {
+            & > p {
+                text-align: start;
+            }
+        }
+    }
+    &[data-direction="right"]{
+        padding:1rem 0rem 0rem 0rem ;
+        & > a {
+            flex-flow: row-reverse;
+            & > p {
+                text-align: end;
+            }
+        }
+    }
+}
+.regular__wrapper {
     @include size(auto,30rem);
     border-radius: .72rem;
     margin: auto;
@@ -38,11 +83,28 @@
 
 @media only screen {
     @media (min-width: 900px) {
-        .recommended__wrapper {
+        .regural__wrapper {
             margin:0 auto;
             width: clamp(27rem, 47rem, 99%);
-            // margin: 0;
-    // width: 30rem;
+        }
+        .recommended__wrapper {
+            & >a {
+                & > i {
+                    font-size: 4.2rem;
+                }
+                & > p {
+                    display: unset;
+                }
+            }
+        }
+    }
+    @media (min-width: 1300px) {
+        .recommended__wrapper {
+            & >a {
+                & > p {
+                    font-size: 2rem;
+                }
+            }
         }
     }
 }
