--- a/02/src/components/Layout/Navigation/Menu/Menu.module.scss
+++ b/02/src/components/Layout/Navigation/Menu/Menu.module.scss
@@ -2,12 +2,28 @@
 @import "../../../../styles/Variables.scss";
 
 .wrapper {
-    @include flex(flex-start,flex-start,column,null,1rem);
-    @include size(100%,100%);
+    @include flex(flex-start,flex-start,column,null,.3rem);
+    @include size(100%,clamp(5rem,50rem,99%));
+    margin:0 auto;
     padding:3rem 2rem;
-    background: chocolate;
     overflow-y: scroll;
     &::-webkit-scrollbar {
         width: 0;
+    }
+}
+
+@media only screen {
+    @media (min-width:870px){
+        .wrapper {
+            @include flex(center,flex-end,row nowrap,.5rem,unset);
+            overflow-y: visible;
+            padding: 0 5dvw 0 0 ;
+            width: 100%;
+        }
+    }
+    @media (min-width:1300px){
+        .wrapper {
+            padding: 0 2dvw 0 0 ;
+        }
     }
 }
