finish work with footer

--- a/02/src/components/Layout/Footer/Socials/Socials.module.scss
+++ b/02/src/components/Layout/Footer/Socials/Socials.module.scss
@@ -2,7 +2,7 @@
 @import "../../../../styles/Variables.scss";
 
 .wrapper {
-    @include flex(flex-start,flex-start,column,null,1rem);
+    @include flex(flex-start,flex-start,row wrap,1rem,1rem);
 }
 
 .item {
