--- a/02/src/styles/Utils.scss
+++ b/02/src/styles/Utils.scss
@@ -57,3 +57,40 @@
         }
     }
 }
+
+.contact {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    margin:2rem auto 2rem;
+    width:clamp(5rem,125rem,80%);
+    gap:1rem;
+    & > article {
+        @include flex(flex-start,flex-start,column,null,2rem);
+        grid-column: 1/7;
+        grid-column: 1/-1;
+    }
+    & > aside {
+        @include flex(center,center);
+        padding: .2rem;
+        grid-column: 7/-1;
+        grid-column: 1/-1;
+        height: 30rem;
+
+        & > iframe {
+            @include size(100%,100%);
+            filter:grayscale(100%);
+            border:unset;
+        }
+    }
+    @media only screen {
+        @media (min-width:1100px){
+            & > article {
+                grid-column: 1;
+            }
+            & > aside {
+                grid-column: 2;
+                height: 100%;
+            }
+        }
+    }
+}
