--- a/02/src/components/Views/ServicePage/OpeningHours/OpeningHours.module.scss
+++ b/02/src/components/Views/ServicePage/OpeningHours/OpeningHours.module.scss
@@ -3,7 +3,7 @@
 
 .wrapper {
     @include flex(flex-start,flex-start,column,null,1rem);
-    background-color: #121212;
+    background-color: $night;
     border-radius: 1rem;
     padding: 3rem;
     width: 100%;
@@ -14,7 +14,7 @@
 
 .title {
     @include font(3rem,600,null,uppercase,null,start);
-    border-bottom:1px solid orangered;
+    border-bottom:1px solid $tangelo;
     position: relative;
     margin-bottom: 1rem;
 }
@@ -30,6 +30,6 @@
     }
     & > b {
         font-weight: 800;
-        color: orangered;
+        color: $tangelo;
     }
 }
