--- a/02/src/styles/Variables.scss
+++ b/02/src/styles/Variables.scss
@@ -9,3 +9,20 @@ $fontAlfa:'Alfa Slab One', serif;
 $fontAnton:'Anton', sans-serif;
 $fontBlackOps:'Black Ops One', serif;
 $fontPoppins:'Poppins', sans-serif;
+
+
+$black:rgb(0,0,0);
+$white:rgb(255,255,255);
+$coquelicot:rgb(255, 77, 36); // #FF4D24
+$giantsOrange:rgb(249, 91, 47); // #f95b2f
+$erieBlack:rgb(34, 34, 34);
+$jet: rgb(50, 49, 49); // #323131
+$platinum:rgb(221, 221, 221); //#dddddd
+$night:rgb(18, 18, 18); // #121212
+$offerPageContainerGradeint:linear-gradient(to bottom right, rgba(16, 16, 16, 0.376),rgba(16, 16, 16, 0.384),rgba(249, 91, 47, 0.467));
+$silver:rgb(170, 170, 170);
+$rasinBlack:rgb(23, 23, 23);
+$tangelo:rgb(255, 69, 0); // #ff4500
+$red:rgba(255, 48, 11);
+$homePageHeroGradient:linear-gradient(to bottom,rgba(0, 0, 0, 0.12),rgba(133, 20, 20, 0.3),rgba(0, 0, 0, 0.5) );
+$universalHeroGradient:linear-gradient(to bottom,rgba(255, 0, 0, 0.12),rgba(255, 0, 0, 0.32));
