--- a/02/src/components/Utils/Parts/Hero/Hero.module.scss
+++ b/02/src/components/Utils/Parts/Hero/Hero.module.scss
@@ -10,7 +10,7 @@
 .container {
     @include flex(center,center);
     @include size(100%,100%);
-    background-image:linear-gradient(to bottom,rgba(255, 0, 0, 0.12),rgba(255, 0, 0, 0.32));
+    background-image:$universalHeroGradient;
     padding: 2rem 1rem;
 }
 
