--- a/02/src/components/Utils/Parts/Search/Search.module.scss
+++ b/02/src/components/Utils/Parts/Search/Search.module.scss
@@ -2,7 +2,6 @@
 @import '../../../../styles/Variables.scss';
 
 .wrapper {
-    // background: purple;
     @include size(auto,clamp(10rem,85rem,90%));
     margin:1rem auto 3rem;
     & > form {
@@ -15,18 +14,18 @@
         & > div {
             @include flex(center,flex-end,row nowrap,null,null,true);
             @include size(5rem,100%);
-            background-color: #171717;
+            background-color: $rasinBlack;
             border-radius: .2rem;
             position: relative;
             transition: .12s linear background-color;
             &:focus-within,
             &:hover {
-                background-color: #222;
+                background-color: $erieBlack;
             }
             
             & > input {
                 @include size(100%,100%);
-                color: #fff;
+                color: $white;
                 padding: 0rem 4rem 0rem 1.5rem;
             }
             & > i {
