--- a/02/src/components/Views/HomePage/Hero/Hero.module.scss
+++ b/02/src/components/Views/HomePage/Hero/Hero.module.scss
@@ -17,13 +17,13 @@
 
 .content {
     @include flex(flex-start,center,column,null,2rem,true);
-    background-image: linear-gradient(to bottom,rgba(0, 0, 0, 0.12),rgba(133, 20, 20, 0.3),rgba(0, 0, 0, 0.5) );
+    background-image:$homePageHeroGradient;
     padding: 4rem 1rem;
     z-index: 1;
     & > .headings {
+        color: $white;
         font-family: $fontBlackOps;
-        color: #fff;
-        text-shadow: 1rem 1rem 13rem #000;
+        text-shadow: 1rem 1rem 13rem $black;
         width: 75%;
         & > * {
             @include font(null,900,.9 ,null,1px,start);
