--- a/02/src/components/Views/HomePage/Services/Services.module.scss
+++ b/02/src/components/Views/HomePage/Services/Services.module.scss
@@ -6,11 +6,11 @@
 
 @keyframes animatedBackground {
     0% {
-        background-color: hsl(9, 100%, 52%,0%);
+        background-color: rgba($tangelo,0);
     }
    
     20%, 95% {
-        background-color: hsl(9, 87%, 45%);
+        background-color: rgba($tangelo,1);
     }
 }
 
@@ -19,8 +19,8 @@
     animation-range-start: cover 0%;
     animation-range-end: cover 120%;
     animation-timeline: view(y);
-    padding: 12rem 1rem;
     margin: 5rem 0rem;
+    padding: 12rem 1rem;
     transition:.12s linear background-color;
 }
 
@@ -29,12 +29,10 @@
     & >* {
         margin: auto;
     }
-
     & > *:not(.cards){
         text-wrap: balance;
         width:clamp(5rem,120rem,90%);
     }
-
 
     & > .title {
         @include font(6.15rem,900,1.2,null,null,start,$fontAnton);
@@ -42,8 +40,8 @@
 
     & > .content, & > .excerpt {
         @include font(1.75rem,500,1.92,null,-.12px,start);
-        padding: 0.45rem;
         margin: 1rem auto;
+        padding: 0.45rem;
     }
 
 }
@@ -58,34 +56,34 @@
     @include backgroundCover();
     @include flex(flex-start,flex-start,column,null,1rem);
     @include size(auto, 100%);
+    background-blend-mode: color;
+    background-color: rgba($black,.6);
     padding: 4rem 1rem;
     transition:.12s linear background-color;
-    background-color: #00000082;
-    background-blend-mode: color;
 
     &:hover {
-        background-color: black !important;
+        background-color: $black !important;
     }
 
 
     & > .title {
         @include font(3.3rem,600,null,null,null,start,$fontBlackOps);
         align-items: center;
+        grid-area: title;
         justify-content: flex-start;
         padding:.6rem 1rem;
-        grid-area: title;
     }
 
     & > .button__wrapper {
         align-items: flex-end;
+        grid-area: button;
         justify-content: flex-start;
         padding:0rem 2rem;
-        grid-area: button;
         & > .button {
             @include font(2.1rem,700);
             border-radius: .7dvw;
-            background: hsl(0, 0%, 100%);
-            color: #000;
+            background-color:$white;
+            color: $black;
             display: flex;
             padding: .65rem 2rem;
         }
@@ -95,10 +93,10 @@
     & > .content {
         @include font(1.7rem,400,null,null,null,start);
         align-items: center;
+        grid-area: content_box;
         justify-content: center;
         padding: .6rem;
         text-wrap: balance;
-        grid-area: content_box;
     }
 }
 
