--- a/02/src/components/Views/HomePage/ServicesOverview/ServicesOverview.module.scss
+++ b/02/src/components/Views/HomePage/ServicesOverview/ServicesOverview.module.scss
@@ -1,6 +1,4 @@
-// @import "../../../../styles/Global.scss";
 @import "../../../../styles/Mixins.scss";
-// @import "../../../../styles/Utils.scss";
 @import "../../../../styles/Variables.scss";
 
 .wrapper {
@@ -17,10 +15,10 @@
 
 .card {
     @include flex(flex-start,flex-start,column,null,1.5rem);
-    background: #161616;
+    background: $night;
     border-radius: 1dvh;
-    box-shadow:0 0 1rem #000000;
-    color: #ff4d24;
+    box-shadow:0 0 1rem $black;
+    color: $coquelicot;
     padding: 3.5rem;
     width:clamp(5rem,42rem,90%);
 }
@@ -38,15 +36,15 @@
 
 .content {
     @include font(1.8rem,400,1.3);
-    color: #cdc5c5;
+    color: $platinum;
     text-wrap: balance;
 }
 
 .button {
     @include font(2rem,700,null,null,null,center);
-    background-color: #b0abab;
+    background-color: $silver;
     border-radius: .5dvw;
-    color:#161616;
-    padding: 1.15rem 2.5rem;
+    color:$night;
+    padding: 1.15rem .5rem;
     transition:.2s linear background-color;
 }
