--- a/02/src/components/Views/ServicesPage/About/About.module.scss
+++ b/02/src/components/Views/ServicesPage/About/About.module.scss
@@ -3,8 +3,8 @@
 
 .wrapper {
     display: grid;
-    margin: 5rem 0rem 2rem;
     grid-template-columns: repeat(21,1fr);
+    margin: 5rem 0rem 2rem;
     & > * {
         grid-column: 1/-1;
     }
@@ -12,15 +12,15 @@
 
 .box {
     @include flex(flex-start,flex-start,column,null,2rem);
-    padding: 1rem;
     grid-row: 1;
+    padding: 1rem;
     & > .title {
         @include font(6.15rem,800,1,null,null,start,$fontAnton);
     }
 
     & > .content {
         @include font(1.55rem,400,1.5,null,-.8px,start,null);
-        color: #ddd;
+        color: $platinum;
         max-width:75ch;
         padding-right: 2rem;
         text-wrap: balance;
@@ -29,13 +29,12 @@
 
 .image__wrapper {
     aspect-ratio: 1/1;
-    grid-row: 1;
     display: none;
-    // background: red;
+    grid-row: 1;
     margin: auto;
     padding: 1.2rem;
-    width: 50%;
     position: relative;
+    width: 50%;
     & > .image {
         @include size(100%,100%);
         position: relative;
@@ -59,16 +58,9 @@
 
         .image__wrapper {
             grid-row: 2;
-            // background: red;
             grid-column: 3/-1;
-            margin: auto;
             padding: 1.2rem;
             width: 70%;
-            position: relative;
-            & > .image {
-                @include size(100%,100%);
-                position: relative;
-            }
         }       
     }
     @media (min-width:1100px){
