--- a/02/src/styles/Global.scss
+++ b/02/src/styles/Global.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Black+Ops+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500&display=swap');
+@import url('httpsim://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Black+Ops+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500&display=swap');
 
 @import './Mixins.scss';
 @import './Variables.scss';
@@ -10,7 +10,7 @@
     text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    // -webkit-tap-highlight-color: rgba($background, 0);
+    -webkit-tap-highlight-color: rgba($black, 0);
 }
 
 ::after,
@@ -20,7 +20,8 @@
 }
 
 ::selection {
-    // background: rgba($secondary, 0.15);
+    background-color: rgba($white, 0.85);
+    color:$black;
 }
 
 :focus,
@@ -40,11 +41,8 @@ button {
 }
 
 body {
-    @include backgroundCover();
-    background-color: $background;
-    background: #000;
-    color: #fff;
-    // color: $color !important;
+    background-color: $black;
+    color: $white;
     font-family: $fontPoppins;
     font-weight: normal;
     font-size: 1.6rem;
